Set nav to 690px, fix mobile Safari avatar overlap and cropping

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .top-nav-inner {
   width: 860px;
   margin: 0 auto;
-  padding-left: 691px;
+  padding-left: 690px;
 }
 
 .top-nav a {
@@ -261,7 +261,7 @@ footer {
 /* Responsive design */
 @media print, screen and (max-width: 960px) {
   body {
-    padding-top: 100px;
+    padding-top: 70px;
   }
 
   div.wrapper {
@@ -283,8 +283,19 @@ footer {
 
   header {
     padding-right: 0;
-    padding-top: 60px;
+    padding-top: 30px;
+    min-height: auto;
     text-align: center;
+  }
+
+  header img.profile {
+    width: 150px;
+    height: 150px;
+    display: block;
+    margin: 0 auto 15px auto;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
   }
 
   header ul {
@@ -318,6 +329,11 @@ footer {
 @media print, screen and (max-width: 480px) {
   body {
     padding: 15px;
+    padding-top: 70px;
+  }
+
+  header {
+    padding-top: 25px;
   }
 
   header ul {
@@ -329,8 +345,13 @@ footer {
   }
 
   header img.profile {
-    width: 150px;
-    height: 150px;
+    width: 130px;
+    height: 130px;
+    display: block;
+    margin: 0 auto 15px auto;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
   }
 }
 
